# sophia

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  todo.md
crates/sophia-backend-live/: Cargo.toml
crates/sophia-backend-live/src/: dependency.rs  hardware_validation.rs  lib.rs  libinput.rs  native_atomic.rs  native_kms.rs  native_page_flip.rs  native_primary_plane.rs  native_scanout.rs  page_flip.rs  prelude.rs  presentation.rs  production_cpu_cycle.rs  production_intake.rs  production_output_runtime.rs  production_present_scheduler.rs  production_session.rs  production_visual_runtime.rs  rendered_scanout.rs  runtime.rs  scanout_status.rs  session_loop.rs  startup.rs
crates/sophia-backend-live/src/api/: engine.rs  live.rs  mod.rs  protocol.rs  renderer.rs
crates/sophia-backend-live/src/drm/: mod.rs  native_atomic.rs  native_kms.rs  native_page_flip.rs  native_primary_plane.rs  native_scanout.rs
crates/sophia-backend-live/src/hardware_validation/: atomic_scanout_card.rs  mod.rs  preflight.rs
crates/sophia-backend-live/src/input/: mod.rs
crates/sophia-backend-live/src/production_session/: native_scanout.rs
crates/sophia-backend-live/src/runtime/: assembly.rs  composition_smoke.rs  frame_target.rs  native_gbm_tick.rs  output_state.rs  page_flip.rs  rendered_primary_plane.rs  rendered_tick.rs  reports.rs  scanout_lifecycle.rs  tick.rs
crates/sophia-backend-live/src/scanout/: atomic_commit.rs  kms_target.rs  mod.rs  page_flip.rs  page_flip_event.rs  readiness.rs  scanout_status.rs
crates/sophia-backend-live/src/session_loop/: budget.rs  owner.rs  readiness.rs  reports.rs  runtime_tick.rs
crates/sophia-backend-live/src/startup/: assembly.rs  config.rs  egl.rs  mod.rs  page_flip_poller.rs  probe.rs  renderer.rs  report.rs
crates/sophia-backend-live/tests/: egl_probe_feature.rs  gbm_probe_feature.rs  libdrm_events_feature.rs  libinput_events_feature.rs  presentation_feature.rs  production_session.rs  renderer_import.rs  startup.rs
crates/sophia-backend-live/tests/libdrm_events_feature/: atomic_scanout_evidence.rs  atomic_scanout_hardware_smoke.rs  native_page_flip.rs
crates/sophia-cli/: Cargo.toml
crates/sophia-cli/src/: backend_args.rs  backend_evidence.rs  commands.rs  emergency_input.rs  input_proof.rs  lib.rs  main.rs  presentation_transaction.rs  resize_transaction.rs  support.rs
crates/sophia-cli/src/commands/: backend.rs  help.rs  live_session.rs  portal.rs  routed_input.rs  runtime.rs  wayland.rs  x.rs  x_authority.rs
crates/sophia-cli/tests/: backend_args.rs  backend_evidence.rs  composition_pixel_verifier.rs  emergency_input.rs  input_proof.rs  launcher_safety.rs  presentation_transaction.rs  resize_transaction.rs
crates/sophia-engine/: Cargo.toml
crates/sophia-engine/src/: backend_assembly.rs  chrome.rs  drm.rs  engine.rs  error.rs  frame.rs  input.rs  lib.rs  live_backend.rs  output.rs  render.rs  runtime_driver.rs  session.rs  visual_state.rs  wm.rs  wm_policy.rs
crates/sophia-engine/src/chrome/: action.rs  metadata.rs  notification.rs
crates/sophia-engine/src/engine/: core.rs  layout.rs  rendering.rs  session_tick.rs  wm_transaction.rs
crates/sophia-engine/src/frame/: clock.rs  epoch.rs  page_flip.rs  presentation.rs
crates/sophia-engine/src/input/: focus.rs  hit_test.rs  libinput.rs  routed.rs
crates/sophia-engine/src/runtime_driver/: adapter.rs  driver.rs  live_adapter.rs  observation.rs  production.rs  types.rs
crates/sophia-engine/tests/: backend.rs  backend_assembly.rs  chrome_session.rs  engine.rs  frame_render.rs  input.rs  input_focus.rs  runtime_driver.rs  scheduling.rs  transactions.rs  wm_policy.rs  wm_runtime.rs
crates/sophia-engine/tests/support/: mod.rs
crates/sophia-renderer-live/: Cargo.toml
crates/sophia-renderer-live/src/: buffer_registry.rs  cpu_buffer_registry.rs  cpu_composition.rs  egl_probe.rs  frame_target.rs  gbm_probe.rs  import.rs  lib.rs  native_scanout.rs  presentation.rs  production_cpu_scene.rs  scanout_buffer.rs
crates/sophia-renderer-live/tests/: buffer_registry.rs  cpu_buffer_registry.rs  cpu_composition.rs  egl_probe_feature.rs  gbm_probe_feature.rs  import_boundary.rs  presentation_boundary.rs
crates/sophia-renderer-native-egl/: Cargo.toml
crates/sophia-renderer-native-egl/src/: default_display.rs  gl.rs  lib.rs  pixel_evidence.rs  status.rs
crates/sophia-renderer-native-egl/src/gbm_platform/: config.rs  mod.rs  scanout.rs  smoke.rs
crates/sophia-renderer-native-egl/tests/: export_detail.rs  pixel_evidence.rs
crates/sophia-wayland-authority/: Cargo.toml
crates/sophia-wayland-authority/src/: frontend.rs  lib.rs  reducer.rs
crates/sophia-wayland-authority/tests/: frontend.rs  reducer.rs
crates/sophia-wm-demo/: Cargo.toml
crates/sophia-wm-demo/src/: lib.rs  main.rs  policy.rs  process.rs  socket.rs
crates/sophia-wm-demo/src/process/: client.rs  codec.rs  error.rs  request.rs  response.rs
crates/sophia-wm-demo/tests/: external_process.rs  policy.rs
crates/sophia-x-authority/: Cargo.toml
crates/sophia-x-authority/src/: atom.rs  client_output.rs  clipboard.rs  close_target.rs  codec.rs  dispatch.rs  drawing.rs  event.rs  graphics_context.rs  input_authority.rs  keyboard.rs  lib.rs  packet.rs  pointer.rs  property.rs  resource.rs  runtime.rs  selection.rs  setup.rs  shm.rs  socket.rs  software.rs  transport.rs  window.rs  wire.rs  x11_socket.rs
crates/sophia-x-authority/src/codec/: support.rs
crates/sophia-x-authority/tests/: authority.rs  close_target.rs  input_authority.rs  x11_wire.rs
crates/sophia-x-bridge/: Cargo.toml
crates/sophia-x-bridge/src/: lib.rs  live.rs  routed_input.rs  selection.rs  state.rs
crates/sophia-x-bridge/src/live/: composite.rs  import.rs  persistent.rs  probe.rs  readback.rs
crates/sophia-x-bridge/tests/: bridge.rs  composite_damage.rs  routed_input.rs
crates/sophia-x11-wm-bridge/: Cargo.toml
crates/sophia-x11-wm-bridge/src/: lib.rs  main.rs  runtime.rs
crates/sophia-x11-wm-bridge/tests/: translation.rs
research/wayland/sophia-wayland-authority/: Cargo.toml
research/xlibre/sophia-x-bridge/: Cargo.toml
(+389 files in other folders)
