[workspace]
members = [
    "crates/sophia-cli",
    "crates/sophia-engine",
    "crates/sophia-protocol",
    "crates/sophia-wm-demo",
    "crates/sophia-x-bridge",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
rust-version = "1.96"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
new_without_default = "allow"
