[package]
name = "sophia-backend-live"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
sophia-engine = { path = "../sophia-engine" }
sophia-protocol = { path = "../sophia-protocol" }
sophia-renderer-live = { path = "../sophia-renderer-live" }
drm = { version = "0.15", optional = true, default-features = false }

[features]
default = []
gbm-probe = ["sophia-renderer-live/gbm-probe"]
egl-probe = ["sophia-renderer-live/egl-probe"]
libdrm-events = ["dep:drm"]
libinput-events = []

[lints]
workspace = true
