[package]
name = "sophia-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "sophia"
path = "src/main.rs"

[dependencies]
sophia-backend-live = { path = "../sophia-backend-live", optional = true, default-features = false }
sophia-engine = { path = "../sophia-engine" }
sophia-portal = { path = "../sophia-portal" }
sophia-protocol = { path = "../sophia-protocol" }
sophia-runtime = { path = "../sophia-runtime" }
sophia-wm-demo = { path = "../sophia-wm-demo" }
sophia-wayland-authority = { path = "../sophia-wayland-authority" }
sophia-x-authority = { path = "../sophia-x-authority" }
sophia-x-bridge = { path = "../sophia-x-bridge", optional = true }
tracing.workspace = true
x11rb = "0.13.1"

[features]
default = []
atomic-scanout-live = ["sophia-backend-live/gbm-probe", "sophia-backend-live/libdrm-events", "sophia-backend-live/libinput-events"]
atomic-scanout-smoke-live = ["atomic-scanout-live"]
xlibre-research = ["dep:sophia-x-bridge"]

[lints]
workspace = true
