[package]
name = "sophia-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "sophia"
path = "src/main.rs"

[dependencies]
sophia-backend-live = { path = "../sophia-backend-live", optional = true, default-features = false }
sophia-engine = { path = "../sophia-engine" }
sophia-portal = { path = "../sophia-portal" }
sophia-protocol = { path = "../sophia-protocol" }
sophia-runtime = { path = "../sophia-runtime" }
sophia-wm-demo = { path = "../sophia-wm-demo" }
sophia-x-authority = { path = "../sophia-x-authority" }
tracing.workspace = true
rustix = { version = "1.1", default-features = false, features = ["process", "rand", "system"] }
x11rb = "0.13.1"

[features]
default = []
atomic-scanout-live = ["sophia-backend-live/gbm-probe", "sophia-backend-live/libdrm-events", "sophia-backend-live/libinput-events"]
atomic-scanout-smoke-live = ["atomic-scanout-live"]

[lints]
workspace = true
