[package]
name = "sophia-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
sophia-portal = { path = "../sophia-portal" }
sophia-protocol = { path = "../sophia-protocol" }
sophia-runtime = { path = "../sophia-runtime" }
tracing.workspace = true

[lints]
workspace = true
