[package]
name = "sophia-engine"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
sophia-portal = { path = "../sophia-portal" }
sophia-protocol = { path = "../sophia-protocol" }
sophia-runtime = { path = "../sophia-runtime" }
tracing.workspace = true

[lints]
workspace = true
