[package]
name = "sophia-renderer-live"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
sophia-engine = { path = "../sophia-engine" }
sophia-protocol = { path = "../sophia-protocol" }

[features]
default = []
gbm-probe = []

[lints]
workspace = true
