[package]
name = "sophia-renderer-live"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
gbm = { version = "0.18.0", optional = true, default-features = false }
sophia-engine = { path = "../sophia-engine" }
sophia-protocol = { path = "../sophia-protocol" }
sophia-renderer-native-egl = { path = "../sophia-renderer-native-egl", optional = true }

[features]
default = []
gbm-probe = ["dep:gbm"]
egl-probe = ["dep:sophia-renderer-native-egl"]

[lints]
workspace = true
