[package]
name = "sophia-renderer-native-egl"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
gbm = { version = "0.18.0", optional = true, default-features = false }
glow = { version = "0.17.0", default-features = false }
khronos-egl = { version = "6.0.0", default-features = false, features = ["dynamic", "1_5"] }

[features]
default = []
gbm-platform = ["dep:gbm"]

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
new_without_default = "allow"
