[package]
name = "sophia-wm-demo"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
sophia-protocol = { path = "../sophia-protocol" }

[dev-dependencies]
sophia-engine = { path = "../sophia-engine" }

[lints]
workspace = true
