[package]
name = "sophia-x-authority"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
sophia-portal = { path = "../sophia-portal" }
sophia-protocol = { path = "../sophia-protocol" }

[lints]
workspace = true
