[package]
name = "sophia-x-bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
sophia-portal = { path = "../sophia-portal" }
sophia-protocol = { path = "../sophia-protocol" }
x11rb = { version = "0.13.1", features = ["composite", "damage", "render", "shape", "xfixes", "xinput"] }

[lints]
workspace = true
