[package]
name = "sophia-x-bridge"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
sophia-portal = { path = "../sophia-portal" }
sophia-protocol = { path = "../sophia-protocol" }
x11rb = { version = "0.13.1", features = ["composite", "damage", "render", "shape", "xfixes", "xinput", "xtest"] }

[lints]
workspace = true
