[package]
name = "sophia-x11-wm-bridge"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
sophia-protocol = { path = "../sophia-protocol" }
sophia-x-authority = { path = "../sophia-x-authority" }

[lints]
workspace = true
