[package]
name = "sophia-wayland-authority"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"
authors = ["Mason Austin Green"]
rust-version = "1.96"

[dependencies]
sophia-protocol = { path = "../../../crates/sophia-protocol" }
smithay = { version = "0.7", default-features = false, features = ["wayland_frontend"] }

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
new_without_default = "allow"

[workspace]
